Har lokaliserat imposter paketet och ersatt det med det riktika paketet. Efter det recompile och startade om.

--- a/Notes.Api/Notes.Api.csproj
+++ b/Notes.Api/Notes.Api.csproj
@@ -25,7 +25,7 @@
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.1" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.1" />
-		<PackageReference Include="Swashbukle.AspNetCore" Version="2.0.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
 		<PackageReference Include="Swashbukle.AspNetCore.Newtonsoft" Version="2.0.0" />
 	</ItemGroup>
 
